[tool.poetry]
name = "lh-quickstart-python"
version = "0.1.0"
description = "A Python quickstart guide to get LittleHorse up and running with an example "
authors = ["LittleHorse <engineering@littlehorse.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
littlehorse-client = "0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
