[tool.poetry]
name = "lh-quickstart-python"
version = "0.1.0"
description = "A Python quickstart guide to get LittleHorse up and running with an example "
authors = ["LittleHorse <engineering@littlehorse.io>"]
readme = "README.md"
packages = [
    { include = "quickstart" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
typing_extensions = "^4.12.2"
littlehorse-client = "0.12.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
